@@ -44,8 +44,6 @@
 using namespace OpenRCT2;
 using namespace OpenRCT2::Scripting;
 
-static constexpr int32_t OPENRCT2_PLUGIN_API_VERSION = 26;
-
 struct ExpressionStringifier final
 {
 private:
